# YamImageProcessor

./: .gitignore  README.md  core_app_generation_tasks.md  designDocumentCore.md  designDocumentLIMDA.md  extraction18.py  preprocessing22.py  pyproject.toml  requirements-dev.txt  requirements.txt  segmentation25.py  setup.cfg
core/: __init__.py  app_core.py  application_launcher.py  extraction.py  extraction_app.py  i18n.py  io_manager.py  logging.py  path_sanitizer.py  persistence.py  preprocessing.py  preprocessing_app.py  recovery.py  segmentation.py  segmentation_app.py  settings.py  signing.py  thread_controller.py  tiled_image.py
docs/: DEVELOPER_GUIDE.md  PLUGIN_SIGNING.md  TRANSLATIONS.md  core_design_followup_tasks.md  manual_qa_recovery.md  performance_roadmap.md
modules/: __init__.py  preprocessing.py
plugins/: __init__.py  module_base.py
processing/: __init__.py  extraction_pipeline.py  pipeline_cache.py  pipeline_manager.py  preprocessing_pipeline.py  segmentation_pipeline.py  tiled_records.py
scripts/: build_translations.sh  format.sh
tests/: _preprocessing_mocks.py  conftest.py  test_app_core_plugin_signatures.py  test_app_core_telemetry.py  test_app_core_updates.py  test_autosave_manager.py  test_core_telemetry.py  test_core_updates.py  test_extraction_pane.py  test_i18n_loader.py  test_image_io.py  test_io_manager_lazy.py  test_io_manager_paths.py  test_io_manager_streaming.py  test_main_window_docks.py  test_module_loader.py  test_path_sanitizer.py  test_pipeline_cache_streaming.py  test_pipeline_manager.py  test_pipeline_streaming_large.py  (+12 more)
(+43 files in other folders)
