[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = """
/( 
    build
  | dist
  | \\.venv
)/
"""

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"yam_processor.i18n" = ["*.qm"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
pretty = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
markers = [
    "performance: marks tests as performance-sensitive and skipped by default",
]

